content/consul/v1.8.x/content/commands/snapshot/restore.mdx
---
layout: commands
page_title: 'Commands: Snapshot Restore'
sidebar_title: restore
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-04T10:42:51-06:00
last_modified: 2025-11-04T10:42:51-06:00
# END AUTO GENERATED METADATA
---

# Consul Snapshot Restore

Command: `consul snapshot restore`

The `snapshot restore` command is used to restore an atomic, point-in-time
snapshot of the state of the Consul servers which includes key/value entries,
service catalog, prepared queries, sessions, and ACLs. The snapshot is read
from the given file.

Restores involve a potentially dangerous low-level Raft operation that is not
designed to handle server failures during a restore. This command is primarily
intended to be used when recovering from a disaster, restoring into a fresh
cluster of Consul servers.

If ACLs are enabled, a management token must be supplied in order to perform
a snapshot restore.

## Usage

Usage: `consul snapshot restore [options] FILE`

#### API Options

@include 'http_api_options_client.mdx'

@include 'http_api_options_server.mdx'

## Examples

To restore a snapshot from the file "backup.snap":

```shell-session
$ consul snapshot restore backup.snap
Restored snapshot
```

Please see the [HTTP API](/api/snapshot) documentation for
more details about snapshot internals.
